Setting layout issues.

--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,6 @@ a {
 }
 .block--dark {
   background: rgb(36, 25, 25);
-  padding-bottom: 17rem;
 }
 .block__header {
   text-align: center;
@@ -249,6 +248,9 @@ a {
   .block__header {
     font-size: 4rem;
   }
+}
+.my-portfolio__section {
+  padding-bottom: 8rem;
 }
 .my-portfolio__heading {
   color: rgb(177, 177, 222);
@@ -457,7 +459,6 @@ a {
     font-size: 1.5rem;
   }
 }
-
 
 
 
